--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,66 @@
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Next.js
+.next/
+.turbo/
+/.vercel/
+out/
+
+# Build outputs
+dist/
+build/
+
+# TypeScript
+.tsbuildinfo
+
+# Env files
+.env
+.env.local
+.env.*.local
+/.env.*
+
+# Editor directories and files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+
+# Mac files
+.Spotlight-V100
+
+# Database
+*.sqlite
+*.sqlite3
+dev.db
+
+# Misc
+*.pem
+*.key
+
+# Prisma client generated
+/prisma/client/
+
+# JetBrains
+/.idea
+
+# Socket/temporary
+/socket.io-client
+
+# Ignore local secrets or user-specific files
+/secrets.env
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
@@ -39,3 +102,5 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+/src/generated/prisma
