--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,9 @@ build/
 .env
 .env.local
 .env.*.local
-/.env.*
+
+# Permitir .env.example como plantilla
+!.env.example
 
 # Editor directories and files
 .vscode/
