--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "voz-segura",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "tsx server.ts",
     "dev:default": "next dev",
